force-app/main/default/objects/Insurance_Policy__c/Insurance_Policy__c.object-meta.xml
<CustomObject>
    <label>Insurance Policy</label>
    <nameField>
        <label>Insurance_Policy__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>