force-app/main/default/objects/Insurance_Policy__c/fields/Vehicle_Category__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Category__c</fullName>
    <label>Vehicle Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>